--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
